fixed alignment issue

--- a/style.css
+++ b/style.css
@@ -93,9 +93,6 @@ body {
 }
 
 #card-1, #card-2, #card-3 {
-    flex: 1 1 30%;
-    max-width: 360px;
-    min-width: 300px;
     height: auto;
     display: flex;
     flex-direction: column;
@@ -285,15 +282,47 @@ img {
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     display: flex;
-    margin-top: 30px;
-    gap: 20px;
-    flex-direction: column-reverse;
     justify-content: center;
+    text-align: start;
     align-items: center;
+    padding-left: 20px;
+    margin-top: 30px;
+    padding-right: 20px;
+    gap: 20px;
     width: 100%;
     max-width: 1200px;
+    height: auto;
+}
+
+/*  */
+
+
+.news-card2>.news-des{
+    margin-top: 30px;
+    margin-bottom: 30px;
+    display: flex;
+    align-items: start;
+    text-align: start;
+    justify-content: center;
+}
+
+.news-card2>div{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: start;
+    gap: 3px;
+    width: 100%;
+    max-width: 1200px;
+    /* padding: 20px; */
+    padding-left: 30px;
+    text-align: start;
+}
+.news-card2 img{
+    max-width: 100%;
+    height: auto;
+    border-radius: 8px;
     padding-left: 20px;
-    padding-right: 20px;
 }
 
 
